test/syntax/fail/not_combinatorial/fun_every.sync
let node g x = true
let f x = (g x) every true
